Fixed h3 font problem on mobile.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -18,6 +18,10 @@ body, html{
 	margin: 0;
 }
 
+h3{
+	font-size: 22px;
+}
+
 a{
 	color: white;
 	text-decoration: none;
@@ -48,7 +52,6 @@ a{
 }
 
 .top-container{
-	font-size: 22px;
 	font-family: 'ArchivoNarrow-Regular';
 }
 
